Fix clipping of source type icons on small screens

--- a/app/assets/stylesheets/sources.scss
+++ b/app/assets/stylesheets/sources.scss
@@ -14,6 +14,7 @@
     &:before {
       content: "";
       display: inline-block;
+      min-width: 32px;
       width: 32px;
       height: 32px;
       margin-right: 0.5rem;
